--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    <link rel="preload" href="fonts/Ubuntu-Medium.woff2" as="font" type="font/woff2" crossorigin>
    <link rel="preload" href="fonts/Ubuntu-Bold.woff2" as="font" type="font/woff2" crossorigin> -->
    <script src="https://api-maps.yandex.ru/2.1/?apikey=ваш%20API-ключ&lang=ru_RU"></script>
-   <link rel="stylesheet" href="css/vendor.css">
+   <link rel="stylesheet" href="css/normalize.css">
    <link rel="stylesheet" href="css/style.css">
    <title>"Интеркоп"</title>
 </head>
