--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 						<li class="content__item soils" tabindex="0">
 							<article class="product">
 								<a class="product__image">
-									<img src="img/wonder-earth.jpg" alt="Чудо-земля">
+									<img src="img/wonder-earth.webp" alt="Чудо-земля">
 								</a>
 								<h3 class="product__title">
 									<a>Живая чудо-земля</a>
@@ -165,7 +165,7 @@
 						<li class="content__item soils" tabindex="0">
 							<article class="product">
 								<a class="product__image">
-									<img src="img/fialka.jpg" alt="Фиалка">
+									<img src="img/fialka.webp" alt="Фиалка">
 								</a>
 								<h3 class="product__title">
 									<a>Фиалка</a>
@@ -188,7 +188,7 @@
 						<li class="content__item soils" tabindex="0">
 							<article class="product">
 								<a class="product__image">
-									<img src="img/garden-earth.jpg" alt="Садовая земля">
+									<img src="img/garden-earth.webp" alt="Садовая земля">
 								</a>
 								<h3 class="product__title">
 									<a>Садовая земля</a>
@@ -211,7 +211,7 @@
 						<li class="content__item soils" tabindex="0">
 							<article class="product">
 								<a class="product__image">
-									<img src="img/soil-flowers.jpg" alt="Грунт для цветочных культур">
+									<img src="img/soil-flowers.webp" alt="Грунт для цветочных культур">
 								</a>
 								<h3 class="product__title">
 									<a>Грунт для цветочных культур</a>
@@ -234,7 +234,7 @@
 						<li class="content__item soils" tabindex="0">
 							<article class="product">
 								<a class="product__image">
-									<img src="img/tomato.jpg" alt="Томат и перец">
+									<img src="img/tomato.webp" alt="Томат и перец">
 								</a>
 								<h3 class="product__title">
 									<a>Томат и перец</a>
@@ -257,7 +257,7 @@
 						<li class="content__item soils" tabindex="0">
 							<article class="product">
 								<a class="product__image">
-									<img src="img/drenaj.jpg" alt="Дренаж керамзитовый">
+									<img src="img/drenaj.webp" alt="Дренаж керамзитовый">
 								</a>
 								<h3 class="product__title">
 									<a>Дренаж керамзитовый</a>
@@ -280,7 +280,7 @@
 						<li class="content__item soils" tabindex="0">
 							<article class="product">
 								<a class="product__image">
-									<img src="img/rostok.jpg" alt="Росток">
+									<img src="img/rostok.webp" alt="Росток">
 								</a>
 								<h3 class="product__title">
 									<a>Росток</a>
@@ -303,7 +303,7 @@
 						<li class="content__item soils" tabindex="0">
 							<article class="product">
 								<a class="product__image">
-									<img src="img/univ-bio.jpg" alt="Универсальный биогрунт">
+									<img src="img/univ-bio.webp" alt="Универсальный биогрунт">
 								</a>
 								<h3 class="product__title">
 									<a>Универсальный биогрунт</a>
@@ -326,7 +326,7 @@
 						<li class="content__item soils" tabindex="0">
 							<article class="product">
 								<a class="product__image">
-									<img src="img/roses.jpg" alt="Бегонии и розы">
+									<img src="img/roses.webp" alt="Бегонии и розы">
 								</a>
 								<h3 class="product__title">
 									<a>Бегонии и розы</a>
@@ -349,7 +349,7 @@
 						<li class="content__item soils" tabindex="0">
 							<article class="product">
 								<a class="product__image">
-									<img src="img/palm.jpg" alt="Пальма">
+									<img src="img/palm.webp" alt="Пальма">
 								</a>
 								<h3 class="product__title">
 									<a>Пальма</a>
@@ -372,7 +372,7 @@
 						<li class="content__item soils" tabindex="0">
 							<article class="product">
 								<a class="product__image">
-									<img src="img/cactus.jpg" alt="Кактус">
+									<img src="img/cactus.webp" alt="Кактус">
 								</a>
 								<h3 class="product__title">
 									<a>Кактус</a>
@@ -395,7 +395,7 @@
 						<li class="content__item soils" tabindex="0">
 							<article class="product">
 								<a class="product__image">
-									<img src="img/limon.jpg" alt="Лимон">
+									<img src="img/limon.webp" alt="Лимон">
 								</a>
 								<h3 class="product__title">
 									<a>Лимон</a>
@@ -418,7 +418,7 @@
 						<li class="content__item soils" tabindex="0">
 							<article class="product">
 								<a class="product__image">
-									<img src="img/azalia.jpg" alt="Азалии и гортензии">
+									<img src="img/azalia.webp" alt="Азалии и гортензии">
 								</a>
 								<h3 class="product__title">
 									<a>Азалии и гортензии</a>
@@ -441,7 +441,7 @@
 						<li class="content__item soils" tabindex="0">
 							<article class="product">
 								<a class="product__image">
-									<img src="img/soil-pine.jpg" alt="Грунт для вечнозелёных растений">
+									<img src="img/soil-pine.webp" alt="Грунт для вечнозелёных растений">
 								</a>
 								<h3 class="product__title">
 									<a>Грунт для вечнозелёных растений</a>
@@ -464,7 +464,7 @@
 						<li class="content__item soils" tabindex="0">
 							<article class="product">
 								<a class="product__image">
-									<img src="img/cucumber.jpg" alt="Огурец">
+									<img src="img/cucumber.webp" alt="Огурец">
 								</a>
 								<h3 class="product__title">
 									<a>Огурец</a>
@@ -487,7 +487,7 @@
 						<li class="content__item soils" tabindex="0">
 							<article class="product">
 								<a class="product__image">
-									<img src="img/microparnik.jpg" alt="Микропарник">
+									<img src="img/microparnik.webp" alt="Микропарник">
 								</a>
 								<h3 class="product__title">
 									<a>Микропарник</a>
@@ -519,7 +519,7 @@
 						<li class="content__item fertil" tabindex="0">
 							<article class="product">
 								<a class="product__image">
-									<img src="img/biogumus.jpg" alt="Биогумус">
+									<img src="img/biogumus.webp" alt="Биогумус">
 								</a>
 								<h3 class="product__title">
 									<a>Биогумус</a>
@@ -542,7 +542,7 @@
 						<li class="content__item fertil" tabindex="0">
 							<article class="product">
 								<a class="product__image">
-									<img src="img/peregnoi.jpg" alt="Перегной">
+									<img src="img/peregnoi.webp" alt="Перегной">
 								</a>
 								<h3 class="product__title">
 									<a>Перегной</a>
@@ -565,7 +565,7 @@
 						<li class="content__item fertil" tabindex="0">
 							<article class="product">
 								<a class="product__image">
-									<img src="img/bird-drop.jpg" alt="Птичий помёт">
+									<img src="img/bird-drop.webp" alt="Птичий помёт">
 								</a>
 								<h3 class="product__title">
 									<a>Птичий помёт</a>
@@ -588,7 +588,7 @@
 						<li class="content__item fertil" tabindex="0">
 							<article class="product">
 								<a class="product__image">
-									<img src="img/torf-down.jpg" alt="Торф фрезерный низинный">
+									<img src="img/torf-down.webp" alt="Торф фрезерный низинный">
 								</a>
 								<h3 class="product__title">
 									<a>Торф фрезерный низинный</a>
@@ -611,7 +611,7 @@
 						<li class="content__item fertil" tabindex="0">
 							<article class="product">
 								<a class="product__image">
-									<img src="img/torf-up.jpg" alt="Торф фрезерный верховой">
+									<img src="img/torf-up.webp" alt="Торф фрезерный верховой">
 								</a>
 								<h3 class="product__title">
 									<a>Торф фрезерный верховой</a>
@@ -634,7 +634,7 @@
 						<li class="content__item fertil" tabindex="0">
 							<article class="product">
 								<a class="product__image">
-									<img src="img/biomix.jpg" alt="Биомикс">
+									<img src="img/biomix.webp" alt="Биомикс">
 								</a>
 								<h3 class="product__title">
 									<a>Биомикс</a>
@@ -657,7 +657,7 @@
 						<li class="content__item fertil" tabindex="0">
 							<article class="product">
 								<a class="product__image">
-									<img src="img/biostimul.jpg" alt="Биостимулятор">
+									<img src="img/biostimul.webp" alt="Биостимулятор">
 								</a>
 								<h3 class="product__title">
 									<a>Биостимулятор</a>
@@ -680,7 +680,7 @@
 						<li class="content__item fertil" tabindex="0">
 							<article class="product">
 								<a class="product__image">
-									<img src="img/strawberry.jpg" alt="Клубника">
+									<img src="img/strawberry.webp" alt="Клубника">
 								</a>
 								<h3 class="product__title">
 									<a>Клубника</a>
